--- a/css/style.css
+++ b/css/style.css
@@ -1,27 +1,41 @@
-#container{
-	overflow:auto;
-	max-height:500px;
+#container {
+	overflow: auto;
+	max-height: 500px;
 }
-body{
+
+body {
 	
 }
 
-label{
-	width:150px;
-	float:right;
-}
-input:not([type="radio"]),select{
-	display:block;
+label {
+	width: 150px;
+	float: right;
 }
 
-.dialog_div{
-	border:1px solid black;
-	display:none;
-}
-.redalert{
-	border:1px solid red;
-}
-.greenalert{
-	border:1px solid green;
+input:not([type="radio"]),select {
+	display: block;
 }
 
+.dialog_div {
+	border: 1px solid black;
+	display: none;
+}
+
+.redalert {
+	border: 1px solid red;
+}
+
+.greenalert {
+	border: 1px solid green;
+}
+
+.unchecked {
+	border: 1px solid red;
+}
+
+.checked {
+	border: 1px solid green;
+}
+.togglecheck{
+	visibility: hidden;
+}
