--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,28 @@
+.loader_div {
+
+	z-index: 1000;
+
+}
+
 @font-face {
 	font-family: 'custom-font';
 	src: url('../fonts/font7.ttf');
 }
-.user-slider{
-	width:300px;
-	height:300px;
-	background-color:green;
+
+.user-slider {
+	width: 300px;
+	height: 300px;
+	background-color: green;
 }
-.login-wrapper{
-	float:left;
-	width:300px;
+
+.login-wrapper {
+	float: left;
+	width: 300px;
 }
-.login{
-	width:600px;
+
+.login {
+	width: 600px;
 }
-	
 
 .flow_dialog {
 	height: 400px;
@@ -73,7 +81,7 @@ button.green {
 	/* IE10+ */
 	background: linear-gradient(to bottom, #ffb2ad 0%, #ff0000 100%);
 	/* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient(  startColorstr='#ffb2ad',
+	filter: progid:DXImageTransform.Microsoft.gradient(    startColorstr='#ffb2ad',
 		endColorstr='#ff0000', GradientType=0 ); /* IE6-9 */
 	border-color: #D80000;
 }
